--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ h2 {
 }
 .separator {
   margin: 3rem 0;
-  border-bottom: 1px dashed #fff;
+  border-bottom: 1px dashed #131313;
 }
 
 /*============= NAVIGATION =============*/
